hphp/test/slow/parser/php-reserved-name-array-2.php.expectf
Fatal error: A name is expected here. in %s/test/slow/parser/php-reserved-name-array-2.php on line 4